--- a/assignments.html
+++ b/assignments.html
@@ -77,6 +77,7 @@
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Update</th>
+                <th scope="col">Delete</th>
             </tr>
         </thead>
         <tbody id="deliverer-data">
