--- a/payment.html
+++ b/payment.html
@@ -40,7 +40,7 @@
           type="text"
           id="exp-date"
           name="exp-date"
-          placeholder="Expiration Date"
+          placeholder="Expiration Date YYYY-MM-DD"
         /><br />
         <input
           type="text"
