--- a/signup.html
+++ b/signup.html
@@ -27,18 +27,23 @@
     <p>User will then be added to the system and can log in</p>
   </div>
 
-  <form action="" class="signup-form" id="my-form" method="post">
-    <h2 class="">Register User</h2>
-    <input type="text" id="fname" name="fname" placeholder="First Name"><br>
-    <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
-    <input type="text" id="address" name="address" placeholder="Home Address"><br>
-    <input type="text" id="email" name="email" placeholder="Email"><br>
-    <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br><br>
-    <input type="submit" id="sign-up-button" value="Add User">
-  </form>
+  <div class="signup-form">
+    <form action=""  id="my-form-customers" method="post">
+      <h2 class="">Register User</h2>
+      <input style="display:none;" type="text" id="customer-id" name="customer-id" placeholder="Customer ID"/><br />
+      <input type="text" id="fname" name="fname" placeholder="First Name"><br>
+      <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
+      <input type="text" id="address" name="address" placeholder="Home Address"><br>
+      <input type="text" id="email" name="email" placeholder="Email"><br>
+      <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br><br>
+      <input type="submit" id="sign-up-button" value="Add User">
+    </form>
+    <br>
+    <button class="btn btn-success" onclick="updatePayment()">Update</button>
+  </div>
 
   <h3 style="text-align: center; margin-top: 20px;">Customers</h3>
-  <table class="table" style="
+  <table class="table" id="customer-table" style="
         margin-top: 20px;
         margin-bottom: 30px;
         width: 70%;
