--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <ul class="topnav">
         <li><a class="active header-logo current" href="index.html">InstaDelivery</a></li>
-        <li><a href="cart.html">Shop</a></li>
+        <li><a href="cart.html">Products</a></li>
         <li><a href="orders.html">Orders</a></li>
         <li><a href="payment.html">Payments</a></li>
         <li><a href="assignments.html">Manage Deliverers</a></li>
