--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 <body>
   <ul class="topnav">
     <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
-    <li><a href="cart.html">Shop</a></li>
+    <li><a href="cart.html">Products</a></li>
     <li><a href="orders.html">Orders</a></li>
     <li><a href="payment.html">Payments</a></li>
     <li><a href="assignments.html">Manage Deliverers</a></li>
@@ -28,9 +28,9 @@
   </div>
 
   <div class="signup-form">
-    <form action=""  id="my-form-customers" method="post">
+    <form action="" id="my-form-customers" method="post">
       <h2 class="">Register User</h2>
-      <input style="display:none;" type="text" id="customer-id" name="customer-id" placeholder="Customer ID"/><br />
+      <input style="display:none;" type="text" id="customer-id" name="customer-id" placeholder="Customer ID" /><br />
       <input type="text" id="fname" name="fname" placeholder="First Name"><br>
       <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
       <input type="text" id="address" name="address" placeholder="Home Address"><br>
