--- a/orders.html
+++ b/orders.html
@@ -13,7 +13,7 @@
 <body>
   <ul class="topnav">
     <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
-    <li><a href="cart.html">Shop</a></li>
+    <li><a href="cart.html">Products</a></li>
     <li><a class="current" href="orders.html">Orders</a></li>
     <li><a href="payment.html">Payments</a></li>
     <li><a href="assignments.html">Manage Deliverers</a></li>
@@ -22,7 +22,9 @@
 
   <div class="content-container">
     <h1>Orders</h1>
+    <button onclick="location.href = 'addProductOrder.html';" class="btn btn-primary">Add Product to Order</button>
   </div>
+
 
   <!-- <div class="orders">
         <div class="specific-order">
