changed cart tile to products

--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
   </ul>
 
   <div class="content-container">
-    <h1>Cart</h1>
+    <h1>Products</h1>
 
     <!-- Search Bar -->
     <div class="search">
