--- a/assignments.html
+++ b/assignments.html
@@ -21,7 +21,7 @@
     </ul>
 
     <div class="content-container">
-        <h1>Deliverer Assignments</h1>
+        <h1>Manage Deliverers</h1>
         <br>
         <button onclick="location.href = 'addOrder.html';" class="btn btn-primary">Add Order</button>
         <!-- <div class="search">
