--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 help customers and the
                 store safely make purchases and deliver goods during the age of COVID-19.
             </p>
-            <p style="padding-top: 20px">Shop - Add, update, delete products to/from an order. Place an order.</p>
-            <p>Orders - Update/Delete an order.</p>
-            <p>Payment - Add a payment, update/delete a payment.</p>
-            <p>Deliverer - Assign/Remove orders to a deliverer.</p>
-            <p>Sign Up - Assign/Remove/Update customers and deliverers</p>
+            <p style="padding-top: 20px">Products - Add, update, delete products to/from an order. Place an order.</p>
+            <p>Orders - Update/Delete an order or product from products_orders table.</p>
+            <p>Payments - Add a payment, update/delete a payment.</p>
+            <p>Manage Deliverers - Add, Update, or Delete a deliverer. Add, Update, or Delete an order</p>
+            <p>Manage Customers - Add, Update, or Delete a customer</p>
         </div>
     </div>
 
