--- a/signup.html
+++ b/signup.html
@@ -21,10 +21,7 @@
   </ul>
 
   <div class="content-container">
-    <h1>Sign Up</h1>
-    <p>User selects if they are a customer or delivery driver</p>
-    <p>User can enter in first name, last name, email, and password</p>
-    <p>User will then be added to the system and can log in</p>
+    <h1>Manage Customers</h1>
   </div>
 
   <div class="signup-form">
