changed how requests can be inputted

--- a/addOrder.html
+++ b/addOrder.html
@@ -35,9 +35,9 @@
         </select><br>
         <input style="display:none;" type="text" id="deliverer-id" name="deliverer-id" placeholder="Deliverer ID" /><br>
         <label for="date" id="time_label">Date Ordered:</label><br>
-        <input type="date" id="date" name="date" placeholder="Data Ordered"><br>
+        <input type="date" id="date" name="date" placeholder="Data Ordered" required><br>
         <label for="status" id="time_label">Delivery Status:</label><br>
-        <input type="text" id="status" name="status" placeholder="Delivery Status"><br>
+        <input type="text" id="status" name="status" placeholder="Delivery Status" required><br>
         <label for="dTime" id="time_label">Departure Time:</label><br>
         <input type="time" id="dTime" name="dTime" placeholder="Departure Time"><br>
         <label for="aTime" id="time_label">Arrival Time:</label><br>
