--- a/signup.html
+++ b/signup.html
@@ -28,11 +28,11 @@
     <form action="" id="my-form-customers" method="post">
       <h2 class="">Register User</h2>
       <input style="display:none;" type="text" id="customer-id" name="customer-id" placeholder="Customer ID" /><br />
-      <input type="text" id="fname" name="fname" placeholder="First Name"><br>
-      <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
-      <input type="text" id="address" name="address" placeholder="Home Address"><br>
-      <input type="text" id="email" name="email" placeholder="Email"><br>
-      <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br><br>
+      <input type="text" id="fname" name="fname" placeholder="First Name" required><br>
+      <input type="text" id="lname" name="lname" placeholder="Last Name" required><br>
+      <input type="text" id="address" name="address" placeholder="Home Address" required><br>
+      <input type="text" id="email" name="email" placeholder="Email" required><br>
+      <input type="password" id="psswrd" name="psswrd" placeholder="Password" required><br><br>
       <input type="submit" id="sign-up-button" value="Add User">
     </form>
     <br>
