changed products_orders update

--- a/payment.html
+++ b/payment.html
@@ -27,7 +27,10 @@
       <input type="number" id="card-number" name="card-number" placeholder="Card Number" required /><br />
       <input type="date" id="exp-date" name="exp-date" placeholder="Expiration Date YYYY-MM-DD" required/><br />
       <input type="number" id="sec-code" name="sec-code" placeholder="Security Code" required/><br />
-      <input type="number" id="holder-id" name="holder-id" placeholder="Card Holder ID" required/><br />
+      <!-- <input type="number" id="holder-id" name="holder-id" placeholder="Card Holder ID" required/><br /> -->
+      <select id="holder_id_options" name="holder-id-2">
+        <!-- Content goes here -->
+      </select><br>
       <input type="text" id="card-bank" name="card-bank" placeholder="Bank" required/><br /><br />
       <input type="submit" id="payment-button" value="Add Payment" />
     </form>
